#25 Added the right button and left button to the Plant and added it to the software to show

--- a/WebsiteHospitalThreeJS-main/WebsiteHospitalThreeJS-main/Thumb_Raiser.html
+++ b/WebsiteHospitalThreeJS-main/WebsiteHospitalThreeJS-main/Thumb_Raiser.html
@@ -211,6 +211,21 @@
                     <td>Statistics</td>
                 </tr>
                 <tr>
+                    <th colspan="2" style="text-align: left">Camera Controls</th>
+                </tr>
+                <tr>
+                    <td>Left Mouse Button</td>
+                    <td>Adjust camera distance (drag)</td>
+                </tr>
+                <tr>
+                    <td>Right Mouse Button</td>
+                    <td>Rotate camera view (drag)</td>
+                </tr>
+                <tr>
+                    <td>Mouse Wheel</td>
+                    <td>Zoom in/out</td>
+                </tr>
+                <tr>
                     <th colspan="2" style="text-align: left">Move character</th>
                 </tr>
                 <tr>
