--- a/WebsiteHospitalThreeJS-main/WebsiteHospitalThreeJS-main/Thumb_Raiser.html
+++ b/WebsiteHospitalThreeJS-main/WebsiteHospitalThreeJS-main/Thumb_Raiser.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="hospital.png">
     <title>Basic Thumb Raiser</title>
     <style>
         body {
