Added the connection between the data base and the hospital plant, also added some backend missing codes for surgeryroom

--- a/my-react-app/public/WebsiteHospitalThreeJS-main/Hospital_3D_module.html
+++ b/my-react-app/public/WebsiteHospitalThreeJS-main/Hospital_3D_module.html
@@ -109,6 +109,12 @@
             display: block;
         }
     </style>
+    <script>
+        // Add CORS headers handling
+        window.addEventListener('load', function() {
+            window.thumbRaiser.checkRoomStatus();
+        });
+    </script>
 </head>
 
 <body>
